# teleprox

./: .actrc  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  pyproject.toml  repro_issue_40.py  setup.py
.github/workflows/: deploy.yml  test.yml
examples/: advanced_logging.py  conda_env.py  custom_logviewer_with_docs.py  daemon.py  remote_logging.py  shared_memory.py
teleprox/: __init__.py  bootstrap.py  client.py  process.py  processspawner.py  proxy.py  qt.py  qt_poll_thread.py  qt_server.py  qt_util.py  serializer.py  server.py  shmem.py  throughline.py  timer.py  util.py
teleprox/log/: __init__.py  handler.py  logviewer.py  remote.py  stdio.py
teleprox/log/logviewer/: __init__.py  constants.py  core.py  export.py  filtering.py  log_model.py  proxies.py  utils.py  viewer.py  widgets.py
teleprox/log/logviewer/tests/: conftest.py  debug_filtering.py  debug_filtering2.py  test_child_filtering.py  test_child_inheritance.py  test_child_preservation.py  test_child_ui_behavior.py  test_code_line_clicking.py  test_column_data_mapping.py  test_column_filtering.py  test_column_filtering_integration.py  test_context_menu_copy.py  test_export.py  test_filter_data_roles.py  test_filter_manager.py  test_filter_proxies.py  (+11 more)
teleprox/tests/: check_qt.py  failure_modes.py  rpc_benchmark.py  test_basics.py  test_call_hooks.py  test_daemon.py  test_logging.py  test_logsender_filters.py  test_proxy.py  test_qt.py  test_rpc.py  test_serializer.py  test_server.py  test_shmem.py  test_spawner.py  test_stray.py  test_throughline.py  threaded_exceptions.py  util.py
